# cassady

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  SECURITY.md  build.rs  mkdocs.yml  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  task.yml
.github/scripts/: build-pages.py
.github/workflows/: ci.yml  pages.yml  release.yml
cassady-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
cassady-desktop/src/: App.tsx  index.css  main.tsx
cassady-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cassady-desktop/src-tauri/icons/: icon.icns
cassady-desktop/src-tauri/src/: lib.rs  main.rs  session.rs  state.rs  turn.rs  types.rs
cassady-desktop/src/components/: ApprovalDialog.tsx  BranchModal.tsx  ChatShell.tsx  Composer.tsx  LoginModal.tsx  LogoutModal.tsx  ModelSelector.tsx  SlashMenu.tsx  StatusFooter.tsx  TopBar.tsx  Transcript.tsx
cassady-desktop/src/components/blocks/: AssistantBlock.tsx  (+4 more)
cassady-desktop/src/hooks/: useTurn.ts
cassady-desktop/src/lib/: sessionSettings.ts  tauri.ts
docs/: README.md  access-modes.md  commands.md  configuration.md  embedding.md  glossary.md  mkdocs.yml  platforms.md  providers.md  troubleshooting.md  workflows.md
docs/releases/: v0.4.0.md  v0.4.1.md  v0.4.2.md
examples/: headless_agent.rs
npm/scripts/: prepare-release.mjs  publish-release.mjs  verify-release.mjs
npm/scripts/lib/: release-config.mjs
plans/: DESKTOP_SLASH_COMMANDS_PLAN.md  PLAN.md  PROVIDER_MODEL_CONFIG_PLAN.md  SECURITY_ACCESS_MODES_PLAN.md  V0_2_1_COLLAPSED_TOOL_DENSITY_PLAN.md  V0_2_1_MESSAGE_RENDERING_POLISH_PLAN.md  V0_2_2_ONBOARDING_SETUP_WIZARD_PLAN.md  V0_2_3_DOCUMENTATION_README_REFRESH_PLAN.md  V0_2_4_SYSTEM_PROMPT_REFINEMENT_PLAN.md  V0_2_6_RUST_EMBEDDING_API_PLAN.md  V0_2_7_SELF_UPDATE_COMMAND_PLAN.md  V0_2_8_CONVERSATION_BRANCH_RESTORE_PLAN.md  V0_2_9_PROVIDER_LOGIN_MANAGEMENT_PLAN.md  V0_3_0_CHATGPT_CODEX_PROVIDER_PLAN.md  V0_3_2_FAST_MODE_PLAN.md  V0_3_3_TOOL_OUTPUT_CONTEXT_RELIABILITY_PLAN.md  V0_3_4_TOOL_OUTPUT_CONTEXT_RELIABILITY_PLAN.md  V0_3_5_TOOL_OUTPUT_CONTEXT_RELIABILITY_PLAN.md  V0_4_0_DESKTOP_APP_PLAN.md
src/: access.rs  agent.rs  app.rs  branch.rs  check.rs  cli.rs  codex_auth.rs  commands.rs  config.rs  conversation.rs  desktop.rs  docs.rs  embedding.rs  error.rs  file_edits.rs  lib.rs  main.rs  menu.rs  prelude.rs  prompt.rs  security.rs  setup.rs  update.rs
src/providers/: chatgpt_codex.rs  mod.rs  openai_compatible.rs  types.rs
src/tools/: edit.rs  grep.rs  ls.rs  mod.rs  path.rs  read.rs  schema.rs  shell.rs  write.rs
src/ui/: autofill.rs  events.rs  mod.rs  render.rs  terminal.rs  theme.rs
tests/: agent_tests.rs  config_tests.rs  conversation_tests.rs  docs_tests.rs  embedding_tests.rs  prompt_tests.rs  setup_tests.rs  tool_tests.rs
(+5 files in other folders)
