[package]
name = "cassady"
version = "0.1.0"
edition = "2021"
description = "Cassady/Cass minimal terminal coding agent"
license = "MIT"
default-run = "cass"

[lib]
name = "cassady"
path = "src/lib.rs"

[[bin]]
name = "cass"
path = "src/main.rs"

[[bin]]
name = "cassady"
path = "src/bin/cassady.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
futures-util = "0.3"
ignore = "0.4"
nanoid = "0.4"
ratatui = "0.28"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tui-textarea = "0.6"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
