[package]
name = "cassady"
version = "0.4.0"
edition = "2021"
description = "Cassady/Cass minimal terminal coding agent"
license = "MIT"
default-run = "cass"

[lib]
name = "cassady"
path = "src/lib.rs"

[[bin]]
name = "cass"
path = "src/main.rs"

[[bin]]
name = "cassady"
path = "src/bin/cassady.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "5"
futures-util = "0.3"
ignore = "0.4"
include_dir = "0.7"
libc = "0.2"
nanoid = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "underline-color"] }
regex = "1"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "io-util"] }
unicode-width = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[workspace]
members = ["cassady-desktop/src-tauri"]
resolver = "2"
